Добавляет разметку каталога товаров

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo logo" href="index.html">
+      <a class="main-header__logo" href="index.html">
         <img class="logo" width="" height="" alt="Cat Energy">
       </a>
       <nav class="main-nav">
@@ -151,45 +151,45 @@
           </div>
         </div>
       </section>
-
-      <section class="location">
-        <div class="location__wrapper">
-
-          <div class="location__contacts contacts">
-            <b class="contacts__title">приглашаем к сотрудничеству дилеров!</b>
-            <p class="contacts__text">ул. Большая<br>
-              Конюшенная, д. 19/8<br>
-              Санкт-Петербург
-            </p>
-          </div>
-
-          <div class="location__map map">
-            <h2 class="visually-hidden">Наш адрес</h2>
-            <figure class="map__image">
-              <picture>
-
-                <!-- media -->
-
-              </picture>
-            </figure>
-            <a class="map__link-pin" href="#">
-
-              <!-- media -->
-
-            </a>
-          </div>
-
-        </div>
-      </section>
     </main>
     <footer class="main-footer">
       <div class="main-footer__wrapper">
 
+        <section class="location">
+          <div class="location__wrapper">
+  
+            <div class="location__contacts contacts">
+              <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
+              <p class="contacts__text">ул. Большая<br>
+                Конюшенная, д. 19/8<br>
+                Санкт-Петербург
+              </p>
+            </div>
+  
+            <div class="location__map map">
+              <h2 class="visually-hidden">Наш адрес</h2>
+              <figure class="map__image">
+                <picture>
+  
+                  <!-- media -->
+  
+                </picture>
+              </figure>
+              <a class="map__link-pin" href="#">
+  
+                <!-- media -->
+  
+              </a>
+            </div>
+  
+          </div>
+        </section>
+
          <a class="main-footer__logo" href="index.html">
-          <img src="" width="" height="" alt="Cat Ehergy">
+          <img src="" width="" height="" alt="Cat Energy">
 
           <!-- svg -->
-           
+
         </a> 
 
         <div class="main-footer__social">
