Добавляет разметку формы

--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,7 @@
               <a href="catalog.html">Каталог продукции</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Подбор программы</a>
+              <a href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -176,9 +176,9 @@
         <section class="location">
           <div class="location__wrapper">
   
-            <div class="location__contacts contacts">
-              <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
-              <p class="contacts__text">ул. Большая<br>
+            <div class="location__adress adress">
+              <b class="adress__title">Приглашаем к сотрудничеству дилеров!</b>
+              <p class="adress__text">ул. Большая<br>
                 Конюшенная, д. 19/8<br>
                 Санкт-Петербург
               </p>
