--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Cat Energy</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.scss">
     <link rel="icon" href="favicons/favicon.ico">
     <link rel="icon" href="favicons/icon.svg" type="images/svg+xml">
     <link rel="apple-touch-icon" href="favicons/apple-touch-icon.png">
@@ -15,13 +15,13 @@
     <header class="main-header">
       <a class="main-header__logo logo" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" type="image/svg+xml" srcset="icons/header/logo-desktop.svg" width="70" height="59">
-          <source media="(min-width: 768px)" type="image/svg+xml" srcset="icons/header/logo-tablet.svg" width="60" height="50">
-          <img class="logo__logo-icon" src="icons/header/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+          <source media="(min-width: 1440px)" type="image/svg+xml" srcset="icons/stack.svg#header_logo-desktop" width="70" height="59">
+          <source media="(min-width: 768px)" type="image/svg+xml" srcset="icons/stack.svg#header_logo-tablet" width="60" height="50">
+          <img class="logo__logo-icon" src="icons/stack.svg#header_logo-mobile" width="33" height="38" alt="Логотип Cat Energy">
         </picture>
         <picture>
-          <source media="(min-width: 1440px)" type="images/svg+xml" srcset="icons/header/logo-text.svg" width="118" height="21">
-          <img class="logo__text logo__text--header" src="icons/header/logo-text.svg" width="101" height="18" alt="Cat Energy">
+          <source media="(min-width: 1440px)" type="images/svg+xml" srcset="icons/stack.svg#header_logo-text" width="118" height="21">
+          <img class="logo__text logo__text--header" src="icons/stack.svg#header_logo-text" width="101" height="18" alt="Cat Energy">
         </picture>
       </a>
       <nav class="main-nav">
@@ -69,19 +69,19 @@
                 <a class="products__name" href="#">Cat Energy PRO 500 г</a>
               </b>
 
-              <table class="products-features">
+              <table class="features">
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Масса</td>
                   <td class="features__value">500 г</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Вкус</td>
                   <td class="features__value">Курица</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Цена</td>
                   <td class="features__value">700 ₽</td>
                 </tr>
@@ -108,19 +108,19 @@
                 <a class="products__name" href="#">Cat Energy PRO 1000 г</a>
               </b>
 
-              <table class="products-features">
+              <table class="features">
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Масса</td>
                   <td class="features__value">1000 г</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Вкус</td>
                   <td class="features__value">Курица</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Цена</td>
                   <td class="features__value">1000 ₽</td>
                 </tr>
@@ -147,19 +147,19 @@
                 <a class="products__name" href="#">Cat Energy PRO 500 г</a>
               </b>
 
-              <table class="products-features">
+              <table class="features">
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Масса</td>
                   <td class="features__value">500 г</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Вкус</td>
                   <td class="features__value">Рыба</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Цена</td>
                   <td class="features__value">700 ₽</td>
                 </tr>
@@ -186,19 +186,19 @@
                 <a class="products__name" href="#">Cat Energy PRO 1000 г</a>
               </b>
 
-              <table class="products-features">
+              <table class="features">
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Масса</td>
                   <td class="features__value">1000 г</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Вкус</td>
                   <td class="features__value">Рыба</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Цена</td>
                   <td class="features__value">1000 ₽</td>
                 </tr>
@@ -225,19 +225,19 @@
                 <a class="products__name" href="#">Cat Energy Slim 500 г</a>
               </b>
 
-              <table class="products-features">
+              <table class="features">
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Масса</td>
                   <td class="features__value">500 г</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Вкус</td>
                   <td class="features__value">Гречка</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Цена</td>
                   <td class="features__value">400 ₽</td>
                 </tr>
@@ -264,19 +264,19 @@
                 <a class="products__name" href="#">Cat Energy Slim 1000 г</a>
               </b>
 
-              <table class="products-features">
+              <table class="features">
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Масса</td>
                   <td class="features__value">1000 г</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Вкус</td>
                   <td class="features__value">Гречка</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Цена</td>
                   <td class="features__value">700 ₽</td>
                 </tr>
@@ -303,19 +303,19 @@
                 <a class="products__name" href="#">Cat Energy Slim 500 г</a>
               </b>
 
-              <table class="products-features">
+              <table class="features">
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Масса</td>
                   <td class="features__value">500 г</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Вкус</td>
                   <td class="features__value">Рис</td>
                 </tr>
 
-                <tr class="features">
+                <tr class="features__row">
                   <td class="features__title">Цена</td>
                   <td class="features__value">500 ₽</td>
                 </tr>
@@ -333,7 +333,7 @@
 
               <p class="products__desctiption">На самом деле вкусов гораздо больше!</p>
               
-              <button class="products__button products__button--all" type="button">Показать все</button>
+              <button class="products__button products__button--secondary" type="button">Показать все</button>
 
             </li>
           </ul>
@@ -438,7 +438,7 @@
         </section>
 
         <a class="main-footer__logo logo" href="index.html">
-          <img class="logo__text logo__text--footer" src="icons/header/logo-text.svg" width="128" height="24" alt="Cat Energy">
+          <img class="logo__text logo__text--footer" src="icons/stack.svg#header_logo-text" width="128" height="24" alt="Cat Energy">
         </a> 
 
         <div class="main-footer__social">
