--- a/source/index.html
+++ b/source/index.html
@@ -15,13 +15,13 @@
     <header class="main-header">
       <a class="main-header__logo logo" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" type="image/svg+xml" srcset="icons/header/logo-desktop.svg" width="70" height="59">
-          <source media="(min-width: 768px)" type="image/svg+xml" srcset="icons/header/logo-tablet.svg" width="60" height="50">
-          <img class="logo__logo-icon" src="icons/header/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+          <source media="(min-width: 1440px)" type="image/svg+xml" srcset="icons/stack.svg#header_logo-desktop" width="70" height="59">
+          <source media="(min-width: 768px)" type="image/svg+xml" srcset="icons/stack.svg#header_logo-tablet" width="60" height="50">
+          <img class="logo__logo-icon" src="icons/stack.svg#header_logo-mobile" width="33" height="38" alt="Логотип Cat Energy">
         </picture>
         <picture>
-          <source media="(min-width: 1440px)" type="images/svg+xml" srcset="icons/header/logo-text.svg" width="118" height="21">
-          <img class="logo__text logo__text--header" src="icons/header/logo-text.svg" width="101" height="18" alt="Cat Energy">
+          <source media="(min-width: 1440px)" type="images/svg+xml" srcset="icons/stack.svg#header_logo-text" width="118" height="21">
+          <img class="logo__text logo__text--header" src="icons/stack.svg#header_logo-text" width="101" height="18" alt="Cat Energy">
         </picture>
       </a>
       <nav class="main-nav">
@@ -60,7 +60,7 @@
           </picture>
           
           <p class="promo__slogan">Занялся собой? Зайимись котом!</p>
-          <a class="promo__button" href="#" >Подобрать программу</a>
+          <a class="promo__button" href="form.html" >Подобрать программу</a>
         </div>
 
       </section>
@@ -204,7 +204,7 @@
         </section>
 
          <a class="main-footer__logo logo" href="index.html">
-            <img class="logo__text logo__text--footer" src="icons/header/logo-text.svg" width="128" height="24" alt="Cat Energy">
+            <img class="logo__text logo__text--footer" src="icons/stack.svg#header_logo-text" width="128" height="24" alt="Cat Energy">
         </a> 
 
         <div class="main-footer__social">
