--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Cat Energy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="styles/styles.scss">
+  <link rel="stylesheet" href="styles/styles.css">
   <link rel="icon" href="favicons/favicon.ico">
   <link rel="icon" href="favicons/icon.svg" type="images/svg+xml">
   <link rel="apple-touch-icon" href="favicons/apple-touch-icon.png">
@@ -31,15 +31,15 @@
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="index.html">Главная</a>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Главная</a>
           </li>
-          <li class="site-list__item">
-            <a href="catalog.html">Каталог продукции</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="site-list__item site-list__item--current">
-            <a href="form.html">Подбор программы</a>
+          <li class="main-nav__item main-nav__item--current">
+            <a class="main-nav__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
