--- a/source/index.html
+++ b/source/index.html
@@ -29,15 +29,15 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--current">
-              <a href="index.html">Главная</a>
+          <ul class="main-nav__list">
+            <li class="main-nav__item main-nav__item--current">
+              <a class="main-nav__link" href="index.html">Главная</a>
             </li>
-            <li class="site-list__item">
-              <a href="catalog.html">Каталог продукции</a>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="site-list__item">
-              <a href="form.html">Подбор программы</a>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -59,8 +59,8 @@
             <img class="promo__picture" type="image/png" src="images/mobile-index/index-cat-mobile@1x.png 1x" srcset="images/mobile-index/index-cat-mobile@2x.png 2x" width="280" height="270" alt="Cat Energy PRO со вкусом курицы">
           </picture>
           
-          <p class="promo__slogan">Занялся собой? Зайимись котом!</p>
-          <a class="promo__button" href="form.html" >Подобрать программу</a>
+          <p class="promo__slogan">Занялся собой? Займись котом!</p>
+          <a class="promo__button button" href="form.html" >Подобрать программу</a>
         </div>
 
       </section>
@@ -98,8 +98,8 @@
               кипятком и готово.</p>
             </li>
             <li class="advantages__item advantages__item--icon-eat">
-              <p class="advantages__description">Замените один-два приема 
-                обычной еды на наше 
+              <p class="advantages__description">Замените один-два приема<br> 
+                обычной еды на наше<br>
                 функциональное питание.</p>
             </li>
             <li class="advantages__item advantages__item--icon-clock">
@@ -118,11 +118,11 @@
           <dl class="stats__list">
             <div class="stats__item">
               <dt class="stats__number">5 кг</dt>
-              <dd class="stats__description">снижение веса</dd>
+              <dd class="stats__description-result">снижение веса</dd>
             </div>
             <div class="stats-item">
               <dt class="stats__number">60 дней</dt>
-              <dd class="stats__description">затрачено времени</dd>
+              <dd class="stats__description-result">затрачено времени</dd>
             </div>
           </dl>
 
@@ -177,7 +177,7 @@
           <div class="location__wrapper">
   
             <div class="location__adress adress">
-              <b class="adress__title">Приглашаем к сотрудничеству дилеров!</b>
+              <b class="adress__title">Приглашаем<br>   к сотрудничеству<br> дилеров!</b>
               <p class="adress__text">ул. Большая<br>
                 Конюшенная, д. 19/8<br>
                 Санкт-Петербург
